<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="untiled">Untiled</string>
    <string name="explain">Explain</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="kaydet">Kaydet</string>
    <string name="s_l">Sİl</string>
</resources>