<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoFragment">


    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="541dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/untiledText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/untiled"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:autofillHints="" />

        <EditText
            android:id="@+id/explainText"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/explain"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <EditText
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            android:autofillHints="" />

        <EditText
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/saveTodoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveTodo"
        android:text="@string/kaydet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteTodoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>